--- a/web-dev/index.html
+++ b/web-dev/index.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My Blog</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-    </body>
-    <script src="index.js"></script>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Blog</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div
+        style="display: flex; background-color:aqua; min-width: 100%;  flex-direction: column; justify-content:  center; align-items: center; margin-bottom: 0;">
+        <h1 style="text-align: center;">Cole's Jane Street Experince</h1>
+        <h2>What I had heard about Jane Street</h2>
+        <ul>
+            <li> Quant Company that handles intresting problems </li>
+            <li> Lots of smart people </li>
+
+        </ul>
+    </div>
+
+    <div style="background-color: pink; padding:3% ">
+        <h2 style="text-align: center; margin-top: 0">Reasons I think Jane Street is cool</h2>
+        <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+            <ol>
+                <li>Free Food!!!
+                    <ul>
+                        <li>Especially the sushi</li>
+                    </ul>
+                </li>
+                <li>Pretty views</li>
+                <li>Fancy office</li>
+                <li>Great people and culture</li>
+            </ol>
+            </ol>
+            <img src="https://images.seeklogo.com/logo-png/35/2/jane-street-capital-logo-png_seeklogo-350837.png" />
+        </div>
+    </div>
+    <div
+        style="background-color: orange ;display: flex; flex-direction: column; justify-content:  center; align-items: center; padding-bottom:3%">
+
+        <h2>Daily Schedule</h2>
+        <table>
+            <tr>
+                <th>Time</th>
+                <th>Activity</th>
+            </tr>
+            <tr>
+                <td>9:00-9:30</td>
+                <td>Breakfast</td>
+            </tr>
+            <tr>
+                <td>9:30-12:30</td>
+                <td>Work Time</td>
+            </tr>
+            <tr>
+                <td>12:30-1:30</td>
+                <td>Lunch</td>
+            </tr>
+            <tr>
+                <td>1:30-5:00</td>
+                <td>Work Time</td>
+            </tr>
+        </table>
+    </div>
+</body>
+<script src="index.js"></script>
+
 </html>
