cole.html creation

--- a/web-dev/index.html
+++ b/web-dev/index.html
@@ -12,7 +12,7 @@
 <body>
     <div
         style="display: flex; background-color:aqua; min-width: 100%;  flex-direction: column; justify-content:  center; align-items: center; margin-bottom: 0;">
-        <h1 style="text-align: center;">Cole's Jane Street Experince</h1>
+        <h1 style="text-align: center;"><a href="./cole.html">Cole's</a> Jane Street Experince</h1>
         <h2>What I had heard about Jane Street</h2>
         <ul>
             <li> Quant Company that handles intresting problems </li>
